@@ -48,7 +48,6 @@ Tellico::Data::FieldList BookCollection::defaultFields() {
   FieldList list;
   FieldPtr field;
 
-  list.append(createDefaultField(IDField));
   list.append(createDefaultField(TitleField));
 
   field = new Field(QLatin1String("subtitle"), i18n("Subtitle"));
@@ -186,6 +185,10 @@ Tellico::Data::FieldList BookCollection::defaultFields() {
   field = new Field(QLatin1String("comments"), i18n("Comments"), Field::Para);
   field->setCategory(i18n(book_personal));
   list.append(field);
+
+  list.append(createDefaultField(IDField));
+  list.append(createDefaultField(CreatedDateField));
+  list.append(createDefaultField(ModifiedDateField));
 
   return list;
 }
