@@ -45,8 +45,6 @@ Tellico::Data::FieldList CardCollection::defaultFields() {
   FieldList list;
   FieldPtr field;
 
-  list.append(createDefaultField(IDField));
-
   field = createDefaultField(TitleField);
   field->setProperty(QLatin1String("template"), QLatin1String("%{year} %{brand} %{player}"));
   field->setFlags(Field::NoDelete | Field::Derived);
@@ -127,6 +125,10 @@ Tellico::Data::FieldList CardCollection::defaultFields() {
 
   field = new Field(QLatin1String("comments"), i18n("Comments"), Field::Para);
   list.append(field);
+
+  list.append(createDefaultField(IDField));
+  list.append(createDefaultField(CreatedDateField));
+  list.append(createDefaultField(ModifiedDateField));
 
   return list;
 }
