@@ -46,8 +46,6 @@ Tellico::Data::FieldList StampCollection::defaultFields() {
   FieldList list;
   FieldPtr field;
 
-  list.append(createDefaultField(IDField));
-
   field = createDefaultField(TitleField);
   field->setProperty(QLatin1String("template"), QLatin1String("%{year} %{description} %{denomination}"));
   field->setFlags(Field::NoDelete | Field::Derived);
@@ -137,6 +135,10 @@ Tellico::Data::FieldList StampCollection::defaultFields() {
 
   field = new Field(QLatin1String("comments"), i18n("Comments"), Field::Para);
   list.append(field);
+
+  list.append(createDefaultField(IDField));
+  list.append(createDefaultField(CreatedDateField));
+  list.append(createDefaultField(ModifiedDateField));
 
   return list;
 }
